# fast_api_project

./: README.md  pyproject.toml
app/: alembic.ini
app/alembic/versions/: 499f390dc506_set_schema.py
app/src/: utils.py
app/src/auth/: models_auth.py  routes_auth.py
app/src/database/: db_models.py
app/src/group_members/: models_group_members.py
app/src/social_groups/: models_social_groups.py
app/src/users/: models_users.py  routes_users.py
app/tests/endpoint_tests/: status_code_test_posts_fail.py  status_code_test_posts_success.py
data_sets/: group_members_6_(27-11-2023).csv  posts_6_(27-11-2023).csv  social_groups_6_(27-11-2023).csv  users_6_(27-11-2023).csv  users_credentials.csv  votes_6_(27-11-2023).csv
mysql_dumps/: social_network_28_11_2023_dump.sql
requirements/: requirements.txt
version_12/: main.py
version_12/alembic/: env.py
version_12/src/: env_models.py  oauth2.py  route_config.py
version_12/src/auth/: routes_auth.py
version_12/src/database/: db_models.py  db_setup.py  http_exceptions.py
version_12/src/group_members/: models_group_members.py  routes_group_members.py
version_12/src/posts/: models_posts.py  routes_posts.py
version_12/src/social_groups/: routes_social_groups.py
version_12/src/votes/: models_votes.py  routes_votes.py
version_12/tests/authentication_tests/: login_test.py
